<?xml version="1.0"?>

<package format="2">

  <name>point_cloud_io</name>
  <version>0.3.0</version>
  <description>Tools to either read and publish or subscribe and write PointCloud2 messages.</description>

  <license>BSD</license>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <author email="czuidema@ethz.ch">Christoph Zuidema</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="czuidema@ethz.ch">Christoph Zuidema</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>radiation_srvs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

</package>
